feat(analysis): redesign energy analysis around properties and appliances
Reestrutura a análise energética para ser vinculada a propriedades e inventário de aparelhos, persistindo recomendações e status da análise. Adiciona suporte a Oracle/Flyway e endpoints de propriedades e catálogo de aparelhos.